--- a/DiageoMDMWeb/src/main/webapp/admin/sales/formSales.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/sales/formSales.xhtml
@@ -39,7 +39,7 @@ and open the template in the editor.
                 <h:outputLabel value="#{msg.out_punto_venta}"/>
                 <p:inputText value="#{salesCreateBean.pointOfSale}"/>
 
-                <h:outputLabel value="#{msg.sales_code_distri}"/>
+                <h:outputLabel value="#{msg.sales_territory_intouch}"/>
                 <p:inputText value="#{salesCreateBean.distributor_2}"/>
 
                 <h:outputLabel value="#{msg.m_distribuidor}"/>
