--- a/DiageoMDMWeb/src/main/webapp/reports/commercialManagement.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/reports/commercialManagement.xhtml
@@ -15,7 +15,7 @@
                         <br/>
                         <h:panelGroup id="pgSegment">
                             <h:panelGrid columns="4" style="width: 90%">
-                                <h:outputLabel value="#{msg.dis_commercial_management}"/>
+                                <h:outputLabel value="#{msg.dis_branchs}"/>
                                 <p:selectOneMenu value="#{reportCommercialManagement.db3party}" converter="db3PartyConverter" style="width: 80%"> 
                                     <f:selectItems value="#{reportCommercialManagement.listdb3party}" var="list" itemLabel="#{list.name3party}"/>
                                 </p:selectOneMenu>
