--- a/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
@@ -66,7 +66,7 @@
                                     <p:selectBooleanCheckbox value="#{outletConsultarBean.isFather}" disabled="#{outletConsultarBean.disabledFields and outletConsultarBean.disabledFieldsTmc}"/>
                                     <h:outputLabel value="#{msg.father}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
                                     <p:autoComplete id="acMinLength" minQueryLength="4" value="#{outletConsultarBean.father}" label="#{msg.father}"
-                                                    var="outletFather" itemLabel="#{outletFather.businessName}" itemValue="#{outletFather}" forceSelection="true"
+                                                    var="outletFather" itemLabel="#{outletFather.kiernanId}   #{outletFather.businessName}" itemValue="#{outletFather}" forceSelection="true"
                                                     completeMethod="#{outletConsultarBean.completeChainFather}" effect="fade" converter="outletConverter"
                                                     style="width: 90% !important;" disabled="#{outletConsultarBean.disabledFields and outletConsultarBean.disabledFieldsTmc}"/>
                                 </h:panelGrid>
@@ -118,6 +118,15 @@
 
                                         <h:outputLabel value="#{msg.out_distributor_old}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"/>
                                         <p:inputText readonly="true" value="#{outletConsultarBean.showDistributorName(outletConsultarBean.distributorOld)}"/>
+
+                                        <h:outputLabel value="Journey Plan" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"/>
+                                        <p:selectBooleanCheckbox id="sbJourneyPlan" value="#{outletConsultarBean.journeyPlan}"/>
+
+                                        <h:outputLabel value="#{msg.status}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
+                                        <p:selectOneMenu value="#{outletConsultarBean.statusOutlet}" style="width: 90%">
+                                            <f:selectItem itemValue="A" itemLabel="#{msg.active}"/>
+                                            <f:selectItem itemValue="I" itemLabel="#{msg.inactive}"/>
+                                        </p:selectOneMenu>
                                     </h:panelGrid>
                                     <br/>
                                     <!--h:panelGrid columns="6" style="width: 80%">
@@ -160,7 +169,7 @@
 
                                         <h:outputLabel value="#{msg.out_potencial}" style="width: 100%;" styleClass="tamanio_letra_labels"/>
                                         <p:selectOneMenu converter="potentialConverter" value="#{outletConsultarBean.potentialSelected}"
-                                                         disabled="true"  style="width: 90%">
+                                                         disabled="#{outletConsultarBean.disabledPotentialSegmentation}"  style="width: 90%">
                                             <f:selectItems value="#{outletConsultarBean.listPotential}" var="pot" itemLabel="#{pot.namePotential}"/>
                                         </p:selectOneMenu>
 
@@ -178,6 +187,13 @@
                                             <f:selectItems value="#{outletConsultarBean.listOcs}" var="ocs" itemLabel="#{ocs.nameOcs}"/>
                                         </p:selectOneMenu>
 
+                                        <h:outputLabel value="#{msg.sales_singular}" style="width: 100%;" styleClass="tamanio_letra_labels"/>
+                                        <p:autoComplete id="dd" value="#{outletConsultarBean.sellerSelected}"
+                                                        converter="salesConverter" style="width: 90% !important;"
+                                                        var="seller" itemLabel="#{seller.nameSales}"
+                                                        completeMethod="#{outletConsultarBean.completeSeller}">
+                                            <p:ajax event="itemSelect" process="@this"/>
+                                        </p:autoComplete>
                                     </h:panelGrid>
                                 </h:panelGroup>
                             </p:fieldset>
