--- a/DiageoMDMWeb/src/main/webapp/outlet/createChain.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/createChain.xhtml
@@ -52,17 +52,20 @@
                                 <p:inputText id="itEancode" value="#{createChainBean.eanCode}" required="true" label="#{msg.chain_code_ean_pdv}"/>
                                 <p:message for="itEancode"/>
                             </h:panelGroup>
-                            <h:outputLabel value="#{msg.out_distribuidor}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
+                            <h:outputLabel value="#{msg.out_distribuidor}/#{msg.usu_chain}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
                             <p:selectOneMenu value="#{createChainBean.db3PartySelected}" converter="db3PartyConverter" style="width: 90%">
                                 <f:selectItems value="#{createChainBean.list3Party}" var="party3" itemLabel="#{party3.name3party}"/>
-                            </p:selectOneMenu>
-                            <h:outputLabel value="#{msg.usu_activo}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
-                            <p:selectBooleanCheckbox value="#{createChainBean.activeChain}"/>
+                            </p:selectOneMenu>                        
                             <h:outputLabel value="#{msg.status}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
                             <p:selectOneMenu value="#{createChainBean.status}" style="width: 90%">
                                 <f:selectItem itemValue="A" itemLabel="#{msg.active}"/>
                                 <f:selectItem itemValue="I" itemLabel="#{msg.inactive}"/>
-                                <f:selectItem itemValue="B" itemLabel="#{msg.locked}"/>
+                            </p:selectOneMenu>
+                            
+                            <h:outputLabel value="#{msg.chain_layer}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
+                            <p:selectOneMenu value="#{createChainBean.layerSelected}" converter="layerConverter" style="width: 90%">
+                                 <f:selectItem itemValue="#{null}" itemLabel="#{msg.seleccion}"/>
+                                 <f:selectItems value="#{createChainBean.listLayer}" var="layer" itemLabel="#{layer.nameLayer}"/>
                             </p:selectOneMenu>
                         </h:panelGrid>
                     </p:fieldset>
